--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,131 +1,171 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Averia+Libre:wght@700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
-    background-color: #fcf0f4;
+html {
+  scroll-behavior: smooth;
+  background-color: #fcf0f4;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 
-a{
-    color: #000;
-    text-decoration: none;
+a {
+  color: #000;
+  text-decoration: none;
 }
 
-h1, 
-h2, 
-h3{
-    text-align: center;
-    padding: 2rem 0;
+h1,
+h2,
+h3 {
+  text-align: center;
+  padding: 2rem 0;
+  font-family: 'Averia Libre', cursive;
 }
 
 h1 {
-    font-size: 70px;
-    color: antiquewhite;
-    font-family: verdana;
+  font-size: 70px;
+  color: antiquewhite;
 }
 
 button,
-textarea{
-    background: none;
-    border: none;
-    font-size: 1rem;
+textarea {
+  background: none;
+  border: none;
+  font-size: 1rem;
 }
 
+section {
+  scroll-margin-top: 80px;
+}
 
 #about,
-#search{
-    margin: 80px 0;
-    width: 90%;
-    position: relative;
-    left: 5%;
+#search {
+  margin: 80px 0;
+  width: 90%;
+  position: relative;
+  left: 5%;
 }
 
-
 /* Header */
-.header{
-    position: sticky;
-    top: 0;
-    background-color: #e26c8f
-;
-    padding: 1rem;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+.header {
+  position: sticky;
+  top: 0;
+  background-color: #e26c8f;
+  padding: 1rem;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
 
 header i {
-    width: 10rem;
+  width: 10rem;
 }
 
-header i img{
-    width: 100%;
+header i img {
+  width: 100%;
 }
 
-nav{
-    width: 40%;
+nav {
+  width: 40%;
 }
 
 nav ul {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-nav ul li{
-
-    cursor: pointer;
+nav ul li {
+  cursor: pointer;
 }
 
 /* Home */
-#home{
-    height: calc(100vh - 80px);
-    background: no-repeat;
-    background-size: cover;
-    background-image: url(../imgs/bg-home.png);
+#home {
+  height: calc(100vh - 80px);
+  background: no-repeat;
+  background-size: cover;
+  background-image: url(../imgs/bg-home.png);
 }
 
 /* About */
 
-#about{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+#about {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-#about img{
-    width: 40rem;
-    border-radius: 10px;
+#about img {
+  width: 40rem;
+  border-radius: 10px;
 }
 
-#about .aboutus{
-    width: 40%;
-    
+#about .aboutus {
+  width: 40%;
+}
+
+.aboutus {
+  text-align: justify;
+}
+
+.aboutus h3 {
+  font-size: 3rem;
 }
 
 /* Search */
-#search{
-    display: flex;
-    flex-direction: column;
+#search {
+  display: flex;
+  flex-direction: column;
 }
 
-#search section{
-    display: flex;
-    justify-content: space-around;
+#search section {
+  display: flex;
+  justify-content: space-around;
 }
 
 /* Footer */
-footer{
-    height: 80px;
-    display: flex;
+footer {
+  padding: 1rem 0;
+  background-color: #000;
+  height: 80px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 600px) {
+  #about {
     flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+  }
+
+  #about img {
+    width: 300px;
+  }
+
+  #about .aboutus {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 900px) {
+  #about {
+    flex-direction: column;
+  }
+
+  #about img {
+    width: 800px;
+  }
+
+  #about .aboutus {
+    width: 90%;
+  }
 }
